tests/compile_fail/safe_simd_wrong_token.stderr
warning: unused import: `AvxToken`
 --> tests/compile_fail/safe_simd_wrong_token.rs:4:40
  |
4 | use archmage::tokens::x86::{Sse2Token, AvxToken};
  |                                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `Sse2Token: HasAvx` is not satisfied
  --> tests/compile_fail/safe_simd_wrong_token.rs:11:53
   |
11 |         let _ = archmage::mem::avx::_mm256_loadu_ps(sse2, &data);
   |                 ----------------------------------- ^^^^ the trait `HasAvx` is not implemented for `Sse2Token`
   |                 |
   |                 required by a bound introduced by this call
   |
   = help: the following other types implement trait `HasAvx`:
             Avx2FmaToken
             Avx2Token
             Avx512Vbmi2Token
             Avx512Vbmi2VlToken
             Avx512bwToken
             Avx512bwVlToken
             Avx512fToken
             Avx512fVlToken
           and $N others
note: required by a bound in `archmage::mem::avx::_mm256_loadu_ps`
  --> src/generated/x86/avx.rs
   |
   | pub fn _mm256_loadu_ps(_token: impl HasAvx, mem_addr: &[f32; 8]) -> __m256 {
   |                                     ^^^^^^ required by this bound in `_mm256_loadu_ps`
